tests/baselines/reference/computedPropertyNamesOnOverloads_ES5(strict=true).errors.txt
computedPropertyNamesOnOverloads_ES5.ts(4,5): error TS1168: A computed property name in a method overload must refer to an expression whose type is a literal type or a 'unique symbol' type.
computedPropertyNamesOnOverloads_ES5.ts(4,5): error TS7010: '[methodName]', which lacks return-type annotation, implicitly has an 'any' return type.
computedPropertyNamesOnOverloads_ES5.ts(5,5): error TS1168: A computed property name in a method overload must refer to an expression whose type is a literal type or a 'unique symbol' type.
computedPropertyNamesOnOverloads_ES5.ts(5,5): error TS7010: '[methodName]', which lacks return-type annotation, implicitly has an 'any' return type.


==== computedPropertyNamesOnOverloads_ES5.ts (4 errors) ====
    var methodName = "method";
    var accessorName = "accessor";
    class C {
        [methodName](v: string);
        ~~~~~~~~~~~~
!!! error TS1168: A computed property name in a method overload must refer to an expression whose type is a literal type or a 'unique symbol' type.
        ~~~~~~~~~~~~
!!! error TS7010: '[methodName]', which lacks return-type annotation, implicitly has an 'any' return type.
        [methodName]();
        ~~~~~~~~~~~~
!!! error TS1168: A computed property name in a method overload must refer to an expression whose type is a literal type or a 'unique symbol' type.
        ~~~~~~~~~~~~
!!! error TS7010: '[methodName]', which lacks return-type annotation, implicitly has an 'any' return type.
        [methodName](v?: string) { }
    }